--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
         "grunt-ts": "~1.12.1",
         "grunt-execute": "~0.2.2",
         "extend": "~2.0.0",
-        "mongodb": "~1.4.22"
+        "mongodb": "~1.4.22",
+        "should": "~4.3.0",
+        "express-test": "~0.1.2"
     },
     "devDependencies": {
     }
