--- a/server/package.json
+++ b/server/package.json
@@ -8,21 +8,30 @@
         "email": ""
     },
     "dependencies": {
-        "node-gcm": "~0.9.12",
+        "grunt-ts": "~1.12.1",
+        "grunt-execute": "~0.2.2",
+
         "express": "~4.9.0",
         "body-parser": "~1.8.1",
         "cookie-parser": "~1.3.3",
         "morgan": "~1.3.0",
         "serve-favicon": "~2.1.3",
+
         "winston": "~0.8.3",
         "winston-mongodb": "~0.5.3",
         "express-winston": "~0.2.8",
-        "grunt-ts": "~1.12.1",
-        "grunt-execute": "~0.2.2",
+
         "extend": "~2.0.0",
+
         "mongodb": "~1.4.22",
+
+        "node-gcm": "~0.9.12",
+
         "should": "~4.3.0",
-        "express-test": "~0.1.2"
+        "supertest": "~0.15.0",
+        "mocha": "~2.0.1",
+
+        "colors": "~1.0.3"
     },
     "devDependencies": {
     }
